--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -11,7 +11,7 @@ ext.versions = [
         materialVersion         : '1.0.0',
         MvRx                    : '1.1.0',
         epoxyVersion            : '3.7.0',
-        dagger                  : '2.23.2',
+        koinVersion             : '2.0.1',
         constraintLayout        : '1.1.2',
         retrofitVersion         : '2.4.0',
         moshiVersion            : '1.6.0',
@@ -55,26 +55,24 @@ ext {
     ]
 
     injectionDependencies = [
-            dagger               : "com.google.dagger:dagger:${versions.dagger}",
-            deaggerAndroidSupport: "com.google.dagger:dagger-android-support:${versions.dagger}"
+            koin: "org.koin:koin-android:${versions.koinVersion}"
     ]
 
     kaptDependencies = [
             epoxyProcessor: "com.airbnb.android:epoxy-processor:${versions.epoxyVersion}",
-            moshiProcessor: "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshiVersion}",
-            daggerCompiler        : "com.google.dagger:dagger-compiler:${versions.dagger}",
-            daggerAndroidProcessor: "com.google.dagger:dagger-android-processor:${versions.dagger}"    ]
+            moshiProcessor: "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshiVersion}"
+    ]
 
     imageDependencies = [
             glide: "com.github.bumptech.glide:glide:${versions.glide}"
     ]
 
     apiDependencies = [
-            retrofit        :  "com.squareup.retrofit2:retrofit:${versions.retrofitVersion}",
-            retrofitAdapter : "com.squareup.retrofit2:adapter-rxjava2:${versions.retrofitVersion}",
-            retrofitMoshi   : "com.squareup.retrofit2:converter-moshi:${versions.retrofitVersion}",
-            moshi           : "com.squareup.moshi:moshi:${versions.moshiVersion}",
-            moshiKotlin     : "com.squareup.moshi:moshi-kotlin:${versions.moshiVersion}"
+            retrofit       : "com.squareup.retrofit2:retrofit:${versions.retrofitVersion}",
+            retrofitAdapter: "com.squareup.retrofit2:adapter-rxjava2:${versions.retrofitVersion}",
+            retrofitMoshi  : "com.squareup.retrofit2:converter-moshi:${versions.retrofitVersion}",
+            moshi          : "com.squareup.moshi:moshi:${versions.moshiVersion}",
+            moshiKotlin    : "com.squareup.moshi:moshi-kotlin:${versions.moshiVersion}"
     ]
 
     testingDependencies = [
